@startuml archi-diagram

' Layers
package "API Layer" {
    class PropertyController
    class InvestmentController
    class UserController
}

package "Application Layer" {
    class PropertyService
    class InvestmentService
    class UserService
    class WalletService
}

package "Domain Layer" {
    class Property {
      - id: UUID
      - name: String
      - type: String
      - price: double
      - fundingDeadline: Date
      - fundingStatus: String
      + calculateRentalIncome(): double
      + calculateAppreciation(): double
    }

    class User {
      - id: UUID
      - name: String
      - email: String
      - wallet: Wallet
      + register(): void
      + login(): void
    }

    class Investment {
      - id: UUID
      - property: Property
      - user: User
      - sharePercentage: double
      - investmentAmount: double
      + calculateReturns(): double
    }

    class Wallet {
      - id: UUID
      - balance: double
      + credit(amount: double): void
      + debit(amount: double): void
      + getBalance(): double
    }

    class Certificate {
      - id: UUID
      - property: Property
      - user: User
      - issuedDate: Date
    }

    class DomainService {
      + handleConcurrency(): void
      + notifyInvestors(): void
    }
}

package "Infrastructure Layer" {
    class PropertyRepository
    class InvestmentRepository
    class UserRepository
    class WalletRepository
    class StripePaymentGateway
    class EmailService
}

' Relationships
PropertyController --> PropertyService
UserController --> UserService
InvestmentController --> InvestmentService

PropertyService --> PropertyRepository
InvestmentService --> InvestmentRepository
UserService --> UserRepository
WalletService --> WalletRepository

InvestmentService --> DomainService
WalletService --> DomainService

DomainService --> StripePaymentGateway
DomainService --> EmailService

InvestmentService --> Investment
InvestmentService --> Property
UserService --> User

Property "1" -- "*" Investment
User "1" -- "*" Investment
User "1" -- "1" Wallet
Investment "1" -- "1" Certificate

@enduml
